Alignment corrections

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: auto;
     text-align: center;
     align-content: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 9%;
 }
 table.center{
     margin-left: auto;
@@ -16,6 +19,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
+    border-radius: 20px;
 }
 .text{
     font-size: 25px;
